page-canvas: - Temporal fix for xmlns="" attributes when exporting. - Fixed bug in which new regions in a page without any regions was added behind the image. - Fixed bug in table creation that used an old name of function isValidCoords. - Testing functions for creating and visualizing relations.
svg-canvas:
- New edit mode for selecting multiple elements.
- Modified unselectElem to support multiple selections.
- On mode off disable selectable elements.

--- a/css/page-editor.css
+++ b/css/page-editor.css
@@ -1,7 +1,7 @@
 /**
  * CSS styles for nw-page-editor.
  *
- * @version $Version: 2017.07.28$
+ * @version $Version: 2017.09.08$
  * @author Mauricio Villegas <mauvilsa@upv.es>
  * @copyright Copyright(c) 2015-present, Mauricio Villegas <mauvilsa@upv.es>
  * @license MIT License
@@ -284,6 +284,23 @@
   stroke-opacity: 0.5;
   stroke: red;
   stroke-width: 2;
+}
+
+.Page .Coords.selectable ~ g > .Coords,
+.Page .Coords.editable ~ g > .Coords {
+  pointer-events: none;
+}
+
+.Page .RelationLink {
+  stroke-opacity: 0.5;
+  stroke: Magenta;
+  vector-effect: non-scaling-stroke;
+  stroke-width: 2;
+  fill-opacity: 0;
+}
+
+.Page .RelationLink:hover {
+  stroke-opacity: 1;
 }
 
 .tooltip-up,
